--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Traffic Management</title>
-    <base href="/ai-traffic-management/"> <!-- Fixes relative paths for GitHub Pages -->
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script> <!-- Change absolute to relative path -->
+    <script type="module" src="./src/main.jsx"></script> <!-- Use relative path -->
 </body>
 </html>
